[metadata]
name = Grid2Op
description_file = README.md
version = attr: grid2op.__version__
keywords = ML powergrid optmization RL power-systems
license = Mozilla Public License 2.0 (MPL 2.0)
classifiers = 
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Topic :: Scientific/Engineering
license_files = LICENSE.md